// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table/ColumnHeader Render Sorted Column 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header-"
>
  <div
    class="ColumnHeader-iconContainer-"
  >
    <span
      aria-label="filter"
      class="Icon-icon- Icon-icon-"
      data-icon-content=""
      role="presentation"
      style="font-family: SAP-icons; font-size: 0.75rem;"
      tabindex="-1"
    />
    <span
      aria-label="sort-descending"
      class="Icon-icon- Icon-icon-"
      data-icon-content=""
      role="presentation"
      style="font-family: SAP-icons; font-size: 0.75rem;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Table/ColumnHeader Sort ascending 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header-"
>
  <div
    class="ColumnHeader-iconContainer-"
  />
</div>
`;

exports[`Table/ColumnHeader Sort descending 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header-"
>
  <div
    class="ColumnHeader-iconContainer-"
  />
</div>
`;

exports[`Table/ColumnHeader Sort when already sorted - ascending 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header-"
>
  <div
    class="ColumnHeader-iconContainer-"
  >
    <span
      aria-label="sort-descending"
      class="Icon-icon- Icon-icon-"
      data-icon-content=""
      role="presentation"
      style="font-family: SAP-icons; font-size: 0.75rem;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Table/ColumnHeader Sort when already sorted - descending 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header-"
>
  <div
    class="ColumnHeader-iconContainer-"
  >
    <span
      aria-label="sort-descending"
      class="Icon-icon- Icon-icon-"
      data-icon-content=""
      role="presentation"
      style="font-family: SAP-icons; font-size: 0.75rem;"
      tabindex="-1"
    />
  </div>
</div>
`;

exports[`Table/ColumnHeader With Props 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header-"
>
  <div
    class="ColumnHeader-iconContainer-"
  />
</div>
`;

exports[`Table/ColumnHeader invisible Column 1`] = `
<div
  class="rt-th ColumnHeader-header- ColumnHeader-header- -hidden"
>
  <div
    class="ColumnHeader-iconContainer-"
  />
</div>
`;
